src/test/resources/scripts/language/parser/invalid/coercion/functionArgMismatch.sbsc
println(3);

return false;